voicevox/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: voicevox-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "voicevox.turai.work"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: voicevox
spec:
  hosts:
  - "voicevox.turai.work"
  gateways:
  - voicevox-gateway
  - mesh
  http:
  - route:
    - destination:
        host: voicevox
        port:
          number: 8000
